# DocAgentLine

./: .env.example  .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  FINAL_STATUS.md  Makefile  OPERATIONS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP_COMPLETE.md  STATUS.txt  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  ruff.toml  run_full_test.py  run_test_without_embedding.py  test_invoice.txt  test_system.py
docagentline/: __init__.py
docagentline/app/: __init__.py
docagentline/app/api/: main.py
docagentline/cli/: __init__.py  main.py
docagentline/cli/commands/: metrics.py  results.py  status.py  submit.py
docagentline/config/: __init__.py  settings.py
docagentline/db/: __init__.py  connection.py  models.py
docagentline/observability/: __init__.py  logger.py  tracing.py
docagentline/pipeline/: __init__.py  engine.py  registry.py
docagentline/pipeline/stages/: __init__.py  chunking.py  embedding.py  ingest.py  layout_normalization.py  metrics_and_audit.py  persistence.py  structured_extraction.py  text_extraction.py  validation.py
docagentline/security/: __init__.py  redaction.py
docagentline/services/embedding/: __init__.py  base.py  factory.py  huggingface_provider.py  openai_provider.py
docagentline/services/llm/: __init__.py  base.py  (+3 more)
docagentline/utils/: __init__.py  errors.py
migrations/: env.py
migrations/versions/: 001_initial_schema.py
schemas/: invoice_v1.json  receipt_v1.json
scripts/: init_db.py  run_api.py
tests/: __init__.py  conftest.py  test_pipeline.py  test_storage.py  test_validation.py
(+7 files in other folders)
